// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AmplifyUi test render Container correctly 1`] = `
<div
  style={Object {}}
/>
`;

exports[`AmplifyUi test render FormContainer correctly 1`] = `<div />`;

exports[`AmplifyUi test render FormRow correctly 1`] = `
<div
  style={Object {}}
/>
`;

exports[`AmplifyUi test render Input correctly 1`] = `
<input
  style={Object {}}
/>
`;

exports[`AmplifyUi test render InputRow correctly 1`] = `
<Component
  theme="theme"
>
  <input
    style={Object {}}
  />
</Component>
`;

exports[`AmplifyUi test render Radio correctly 1`] = `
<input
  style={Object {}}
  type="radio"
/>
`;

exports[`AmplifyUi test render RadioRow correctly 1`] = `
<Component
  theme="theme"
>
  <Component
    id="_undefined"
    theme="theme"
  />
  <Component
    htmlFor="_undefined"
    theme="theme"
  />
</Component>
`;

exports[`AmplifyUi test render SectionBody correctly 1`] = `
<div
  style={Object {}}
/>
`;

exports[`AmplifyUi test render SectionFooter correctly 1`] = `
<div
  style={Object {}}
/>
`;

exports[`AmplifyUi test render SectionFooterPrimaryContent correctly 1`] = `
<span
  style={Object {}}
/>
`;

exports[`AmplifyUi test render SectionFooterSecondaryContent correctly 1`] = `
<span
  style={Object {}}
/>
`;

exports[`AmplifyUi test render SectionHeader correctly 1`] = `
<div
  style={Object {}}
>
  <Component
    theme="theme"
  />
</div>
`;

exports[`AmplifyUi test render SectionHeaderContent correctly 1`] = `
<span
  style={Object {}}
/>
`;

exports[`AmplifyUi test render SelectInput correctly 1`] = `
<div
  style={Object {}}
/>
`;

exports[`AmplifyUi test render Strike correctly 1`] = `
<div
  style={Object {}}
>
  <Component
    theme="theme"
  />
</div>
`;

exports[`AmplifyUi test render StrikeContent correctly 1`] = `<span />`;
